@@ -22,4 +22,4 @@ REM Change to the project directory
 CD "%PROJECT_NAME%"
 
 REM Start the Model
-START javaw -XX:+IgnoreUnrecognizedVMOptions --add-modules=ALL-SYSTEM --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED -cp "%CP%" repast.simphony.runtime.RepastMain "./%SCENARIO_DIRECTORY%"
+START javaw -XX:+IgnoreUnrecognizedVMOptions --add-modules=ALL-SYSTEM --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED  --add-exports=java.base/java.lang=ALL-UNNAMED  --add-exports=java.desktop/sun.awt=ALL-UNNAMED  --add-exports=java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -cp "%CP%" repast.simphony.runtime.RepastMain "./%SCENARIO_DIRECTORY%"
